trunk/Archive2/b6/d7759360b20d73/output
main.cpp:2:34: error: operator '==' has no left operand
 #if defined(TESTING) && (TESTING == 1)
                                  ^
